fix broken style

--- a/_sass/_theme.scss
+++ b/_sass/_theme.scss
@@ -322,3 +322,23 @@ footer {
     display:none;
   }
 }
+
+// Custom styling by DG
+
+article img,
+article table {
+  max-width: 100%;
+  height: auto;
+  display: block;
+  margin: 0 auto;
+}
+
+article table {
+  width: 100%;
+  overflow-x: auto;
+}
+
+article table img {
+  width: 100%;
+  height: auto;
+}
